# Evolutionary-checkers

./: .gitignore  LICENSE  README.md  main.ipynb  requirements.txt  results.txt  trained_games.py
data_analysis_scripts/board_analizer/: analyse.py  boards_analizer.py  boards_analizer_kings.py  boards_analyse_2x2_32897_games_cut.txt  boards_analyse_2x2_32897_games_with_kings_cut.txt  boards_analyse_32000_games.txt  boards_analyse_3x3_32897_games_cut.txt  boards_analyse_3x3_32897_games_with_kings_cut.txt  boards_analyse_4x4_32897_games_cut.txt  boards_analyse_4x4_32897_games_with_kings_cut.txt  reader.py  reader_kings.py
data_analysis_scripts/dataset_downloader/: dataset_downloader.py  stop_locking.py
evolutionary_algorithm/: cma-es.py  de.py  evolutionary.py  evolutionary_discrete.py  evolutionary_r.py  pbil.py  pbilc.py  umdac.py  umdac_r.py
evolutionary_algorithm/base_functions/: crossover.py  mutation.py  objective.py  selection.py
evolutionary_algorithm/preparation/: combination_check.py  combinations.py  masking.py  reader.py
game/: constants.py  play.py
game/minimax_agent/: engine.cpp  engine.h  minimax.cpp  minimax.h  misc.h  score.cpp  score.h  test.cpp  test1
game/trained_players/: coefficients_28_08_morning.txt
move_strategies/: minimax.py  strategies.py
python_module/: CMakeLists.txt  setup.py
python_module/src/: checkers_and_minimax_python_module.cpp
results/: 20_08.ipynb  21_08.ipynb  24_08.ipynb  26_08_pbil.ipynb  27_08.ipynb  28_08.ipynb
tests/preparation/: combination_check_test.py  combination_test.py  data_generator.py  (+3 more)
(+6 files in other folders)
